Tenant Login and Registration
This is a basic tenant login and Registration system to test SQL
Database and Table Storage facilities in the cloud

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,13 @@
+<div class="container">
+      <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a ng-href="#">Home</a></li>
+          <li><a ng-href="#/about">About</a></li>
+          <li><a ng-href="#">Contact</a></li>
+        </ul>
+        <h3 class="text-muted">VOTS</h3>
+      </div>
+
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
@@ -20,4 +30,9 @@
 
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
+</div>
+
+<div class="footer">
+        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      </div>
 </div>
