--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,16 +8,24 @@
         <h3 class="text-muted">VOTS</h3>
       </div>
 
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+
+  <!--<h1>'Allo, 'Allo!</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+  </p>-->
+<form role="form">
+  <div class="jumbotron">
+    <div class="form-group">
+      <!--<label for="exampleInputEmail1">Email address</label>-->
+      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Registration Number (License Plate)" autofocus required>
+      <br>
+    </div>
+    <button class="btn btn-success" ng-submit="">Search <span class="glyphicon glyphicon-search"></span></button>
+  </div>
+</form>
 
-<div class="row marketing">
+<!--<div class="row marketing">
   <h4>HTML5 Boilerplate</h4>
   <p>
     HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
@@ -30,9 +38,10 @@
 
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+</div>-->
 
-<div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+  <div class="footer">
+    <p>COMP 6905 - Cloud Computing Project &copy; 2014</p>
+  </div>
+
 </div>
