--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,28 +17,40 @@
 <form role="form">
   <div class="jumbotron">
     <div class="form-group">
-      <!--<label for="exampleInputEmail1">Email address</label>-->
-      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Registration Number (License Plate)" autofocus required>
+      <input type="text" class="form-control" ng-model="vehicle.registrationNo" placeholder="Registration Number (License Plate)" autofocus required>
       <br>
     </div>
-    <button class="btn btn-success" ng-submit="">Search <span class="glyphicon glyphicon-search"></span></button>
+    <button class="btn btn-success" ng-click="retrieveVehicleInfo(vehicle.registrationNo)">Search <span class="glyphicon glyphicon-search"></span></button>
   </div>
 </form>
 
-<!--<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<div ng-if="vehicle.searching">
+  <img ng-src="images/loading.gif" alt="loading ...">
+</div>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>-->
+  <div class="row marketing" ng-if="vehicle.showtable">
+    <table class="table table-striped table-hover table-condensed">
+      <tbody>
+        <tr>
+          <th>Chassis No.</th>
+          <th>Color</th>
+          <th>Make</th>
+          <th>Model</th>
+          <th>Owner</th>
+          <th>Year</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.chassisno}}</td>
+          <td>{{vehicle.details.color}}</td>
+          <td>{{vehicle.details.make}}</td>
+          <td>{{vehicle.details.model}}</td>
+          <td>{{vehicle.details.owner}}</td>
+          <td>{{vehicle.details.year}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
   <div class="footer">
     <p>COMP 6905 - Cloud Computing Project &copy; 2014</p>
