--- a/app/styles/signin.css
+++ b/app/styles/signin.css
@@ -1,25 +1,42 @@
-body {
+.sign-in {
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
+  border-radius: 25px;
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
-.form-signin {
+.sign-in .profile-img
+{
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.sign-in .form-signin {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
 
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.sign-in .form-signin .form-signin-heading, .sign-in .form-signin .checkbox {
   margin-bottom: 10px;
 }
 
-.form-signin .checkbox {
+.sign-in .form-signin .checkbox {
   font-weight: normal;
 }
 
-.form-signin .form-control {
+.sign-in .form-signin .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -29,18 +46,17 @@ body {
   font-size: 16px;
 }
 
-.form-signin .form-control:focus {
+.sign-in .form-signin .form-control:focus {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+.sign-in .need-help
+{
+    margin-top: 10px;
 }
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+.sign-in .new-account
+{
+    display: block;
+    margin-top: 10px;
 }
