--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -1,18 +1,22 @@
 <div class="container">
-
-  <form class="form-signin" role="form" ng-submit="signIn()">
-    <h2 class="form-signin-heading">Please Sign-In</h2>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="text" id="inputEmail" class="form-control" ng-model="user.username" placeholder="Email address" required autofocus>
-    <br>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" ng-model="user.password" placeholder="Password" required>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
-  </form>
-
+  <div class="sign-in">
+    <img class="profile-img" ng-src="images/photo.png" alt="Login Photo">
+    <form class="form-signin" role="form" ng-submit="signIn()">
+      <h2 class="form-signin-heading">Please Sign-In</h2>
+      <input type="text" id="inputEmail" class="form-control" ng-model="user.username" placeholder="Email" required autofocus>
+      <br>
+      <input type="password" id="inputPassword" class="form-control" ng-model="user.password" placeholder="Password" required>
+      <div class="checkbox pull-left">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+    </form>
+    <a href="#" class="text-center new-account">Create an account </a>
+  </div>
+  <br>
+  <br>
+  <div ng-include='"views/footer.html"'></div>
 </div>
