Registration and Logout
Updated registration system and logout implementation

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li><a ng-href="" ng-click="signOut()">Logout</a></li>
         </ul>
         <h3 class="text-muted">VOTS</h3>
       </div>
