--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -14,7 +14,7 @@
       <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
     </form>
-    <a href="#" class="text-center new-account">Create an account </a>
+    <a href="#/signup" class="text-center new-account">Create an account </a>
   </div>
   <br>
   <br>
