--- a/app/styles/signin.css
+++ b/app/styles/signin.css
@@ -1,7 +1,7 @@
 .sign-in {
   margin-left: auto;
   margin-right: auto;
-  width: 500px;
+  width: 400px;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
@@ -13,8 +13,8 @@
 
 .sign-in .profile-img
 {
-    width: 96px;
-    height: 96px;
+    width: 86px;
+    height: 86px;
     margin: 0 auto 10px;
     display: block;
     -moz-border-radius: 50%;
@@ -37,13 +37,13 @@
 }
 
 .sign-in .form-signin .form-control {
-  position: relative;
+  /*position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
   padding: 10px;
-  font-size: 16px;
+  font-size: 16px;*/
 }
 
 .sign-in .form-signin .form-control:focus {
