--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,15 @@
+<div ng-include='"views/header2.html"'></div>
+<br>
+<br>
 <div class="container">
-      <div class="header">
+      <!--<div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
           <li><a ng-href="" ng-click="signOut()">Logout</a></li>
         </ul>
         <h3 class="text-muted">VOTS</h3>
-      </div>
+      </div>-->
 
 
   <!--<h1>'Allo, 'Allo!</h1>
@@ -14,24 +17,38 @@
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     Always a pleasure scaffolding your apps.
   </p>-->
-<form role="form" ng-submit="retrieveVehicleInfo(vehicle.registrationNo)">
+<form role="form" ng-submit="retrieveVehicleInfo()">
   <div class="jumbotron">
+    <!--<div class="input-group">
+      <input type="text" class="form-control">
+      <span class="input-group-btn">
+        <button class="btn btn-success" type="button">Search!<span class="glyphicon glyphicon-search"></span></button>
+      </span>
+    </div>-->
     <div class="form-group">
       <input type="text" class="form-control" ng-model="vehicle.registrationNo" placeholder="Registration Number (License Plate)" autofocus required>
       <br>
     </div>
-    <button class="btn btn-success">Search <span class="glyphicon glyphicon-search"></span></button>
+    <div class="form-group">
+      <select name="country" class="form-control" ng-model="vehicle.country">
+        <option value="">--- please select country ---</option>
+        <option value="TT">Trinidad and Tobago</option>
+        <option value="US">United States of America</option>
+      </select>  
+    </div>
+    <button class="btn btn-success" ng-disabled="vehicle.country===''">Search <span class="glyphicon glyphicon-search"></span></button>
   </div>
 </form>
 
 <div ng-if="vehicle.searching" class="text-center">
-  <img ng-src="images/loading.gif" alt="loading ...">
+  <img ng-src="images/waiting.gif" alt="loading ...">
   <br>
   <br>
 </div>
 
   <div class="row" ng-if="vehicle.showtable">
     <table class="table table-striped table-hover table-condensed">
+      <caption>Contextual Table Layout</caption>
       <tbody>
         <tr>
           <th>Chassis No.</th>
