--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,13 +30,14 @@
       <br>
     </div>
     <div class="form-group">
-      <select name="country" class="form-control" ng-model="vehicle.country">
+      <select name="country" class="form-control" ng-model="vehicle.country" required>
         <option value="">--- please select country ---</option>
+        <option value="GER">Germany</option>
         <option value="TT">Trinidad and Tobago</option>
-        <option value="US">United States of America</option>
+        <option value="USA">United States of America</option>
       </select>  
     </div>
-    <button class="btn btn-success" ng-disabled="vehicle.country===''">Search <span class="glyphicon glyphicon-search"></span></button>
+    <button class="btn btn-success">Search <span class="glyphicon glyphicon-search"></span></button>
   </div>
 </form>
 
@@ -46,29 +47,75 @@
   <br>
 </div>
 
-  <div class="row" ng-if="vehicle.showtable">
+  <div class="row" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable" style="margin: 0 4px 0 4px;">
     <table class="table table-striped table-hover table-condensed">
-      <caption>Contextual Table Layout</caption>
+      <caption><b style="color:blue;">Vehicle Information</b></caption>
       <tbody>
         <tr>
           <th>Chassis No.</th>
+          <th>Certificate No.</th>
           <th>Color</th>
           <th>Make</th>
           <th>Model</th>
-          <th>Owner</th>
           <th>Year</th>
         </tr>
         <!--<tr ng-repeat="vehicle in vehicle.details">-->
         <tr>
           <td>{{vehicle.details.chassisno}}</td>
+          <td>{{vehicle.details.certificateno}}</td>
           <td>{{vehicle.details.color}}</td>
           <td>{{vehicle.details.make}}</td>
           <td>{{vehicle.details.model}}</td>
-          <td>{{vehicle.details.owner}}</td>
           <td>{{vehicle.details.year}}</td>
         </tr>
       </tbody>
     </table>
+  </div>
+
+  <div class="row" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Owner Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Permit No.</th>
+          <th>Age</th>
+          <th>Address</th>
+          <th>Gender</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.owner}}</td>
+          <td>{{vehicle.details.permitno}}</td>
+          <td>{{vehicle.details.age}}</td>
+          <td>{{vehicle.details.address}}</td>
+          <td>{{vehicle.details.gender}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="row" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Insurance Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Insurance No.</th>
+          <th>Company Name</th>
+          <th>Coverage Type</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.insurancecertificate}}</td>
+          <td>{{vehicle.details.insurancename}}</td>
+          <td>{{vehicle.details.insurancetype}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="row" ng-if="vehicle.nodata" style="margin: 0 4px 0 4px;">
+    <h1>No Data Found</h1>
   </div>
 
   <div ng-include='"views/footer.html"'></div>
