Logout and Vehicle Information
Logout implementation, Landing Page Content and Vehicle Search by user
type

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -78,3 +78,13 @@ body {
     border-bottom: 0;
   }
 }
+
+
+.sample-show-hide {
+  -webkit-transition:all linear 0.5s;
+  transition:all linear 0.5s;
+}
+
+.sample-show-hide.ng-if {
+  opacity:0;
+}
