--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,7 +3,7 @@
 <div class="home">
   <!-- Jumbotron -->
   <div class="jumbotron">
-    <h1>Marketing stuff!</h1>
+    <h1>VOTS</h1>
     <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
     <p><a class="btn btn-lg btn-success" href="#/signup" role="button">Sign-Up Today</a></p>
   </div>
@@ -12,18 +12,36 @@
   <!-- Example row of columns -->
   <div class="row">
     <div class="col-lg-4">
-      <h2>Safari bug warning!</h2>
-      <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
+      <h2>The Power of VOTS.</h2>
+      <p class="text-danger">Be sure about the authenthicity of the Vehicle Owner, Simply by entry!</p>
       <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
     </div>
     <div class="col-lg-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <h2>Why Should you use it?</h2>
+      <p>
+        <ul>
+          <li>To stay away from any illegal buying or selling</li>
+          <li>To cross check real information</li>
+          <li>To know about the real vehicle owner</li>
+        </ul>
+      </p>
       <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
     </div>
     <div class="col-lg-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+      <h2>Who can use it?</h2>
+      <p>
+        <ul>
+          <li>Basically anyone</li>
+          <li>
+            Organizations
+            <ul>
+              <li>Insurance Companies</li>
+              <li>Security Agencies</li>
+              <li>Car Companies</li>
+            </ul>
+          </li>
+        </ul>
+      </p>
       <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
     </div>
   </div>
