--- a/app/views/header.html
+++ b/app/views/header.html
@@ -12,9 +12,9 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#/signin">Sign-In</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
       <!--<form class="navbar-form navbar-right">
         <input type="text" class="form-control" placeholder="Search...">
