--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,51 +2,58 @@
 <br>
 <br>
 <div class="container">
-      <!--<div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="" ng-click="signOut()">Logout</a></li>
-        </ul>
-        <h3 class="text-muted">VOTS</h3>
-      </div>-->
-
-
-  <!--<h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>-->
-<form role="form" ng-submit="retrieveVehicleInfo()">
-  <div class="jumbotron">
-    <!--<div class="input-group">
-      <input type="text" class="form-control">
-      <span class="input-group-btn">
-        <button class="btn btn-success" type="button">Search!<span class="glyphicon glyphicon-search"></span></button>
-      </span>
-    </div>-->
-    <div class="form-group">
-      <input type="text" class="form-control" ng-model="vehicle.registrationNo" placeholder="Registration Number (License Plate)" autofocus required>
+  <form role="form" ng-submit="retrieveVehicleInfo()">
+    <div class="jumbotron">
+      <div class="form-group">
+        <input type="text" class="form-control" ng-model="vehicle.registrationNo" placeholder="Registration Number (License Plate)" autofocus required>
       <br>
+      </div>
+      <div class="form-group">
+        <select name="country" class="form-control" ng-model="vehicle.country" required>
+          <option value="">--- please select country ---</option>
+          <option value="GER">Germany</option>
+          <option value="TT">Trinidad and Tobago</option>
+          <option value="USA">United States of America</option>
+        </select>  
+      </div>
+      <button class="btn btn-success">Search <span class="glyphicon glyphicon-search"></span></button>
     </div>
-    <div class="form-group">
-      <select name="country" class="form-control" ng-model="vehicle.country" required>
-        <option value="">--- please select country ---</option>
-        <option value="GER">Germany</option>
-        <option value="TT">Trinidad and Tobago</option>
-        <option value="USA">United States of America</option>
-      </select>  
-    </div>
-    <button class="btn btn-success">Search <span class="glyphicon glyphicon-search"></span></button>
+  </form>
+
+  <div ng-if="vehicle.searching" class="text-center">
+    <img ng-src="images/waiting.gif" alt="loading ...">
+    <br>
+    <br>
   </div>
-</form>
 
-<div ng-if="vehicle.searching" class="text-center">
-  <img ng-src="images/waiting.gif" alt="loading ...">
-  <br>
-  <br>
-</div>
+  <!--Basic User-->
+  <div class="row sample-show-hide" ng-if="vehicle.usertype === 'Basic' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Vehicle Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Chassis No.</th>
+          <th>Certificate No.</th>
+          <th>Color</th>
+          <th>Make</th>
+          <th>Model</th>
+          <th>Year</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.chassisno}}</td>
+          <td>{{vehicle.details.certificateno}}</td>
+          <td>{{vehicle.details.color}}</td>
+          <td>{{vehicle.details.make}}</td>
+          <td>{{vehicle.details.model}}</td>
+          <td>{{vehicle.details.year}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <!--End Basic User-->
 
+  <!--Dealer User-->
   <div class="row" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable" style="margin: 0 4px 0 4px;">
     <table class="table table-striped table-hover table-condensed">
       <caption><b style="color:blue;">Vehicle Information</b></caption>
@@ -113,6 +120,145 @@
       </tbody>
     </table>
   </div>
+  <!--End Dealer User-->
+
+  <!--Security User-->
+  <div class="row" ng-if="vehicle.usertype === 'Security' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Vehicle Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Chassis No.</th>
+          <th>Certificate No.</th>
+          <th>Color</th>
+          <th>Make</th>
+          <th>Model</th>
+          <th>Year</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.chassisno}}</td>
+          <td>{{vehicle.details.certificateno}}</td>
+          <td>{{vehicle.details.color}}</td>
+          <td>{{vehicle.details.make}}</td>
+          <td>{{vehicle.details.model}}</td>
+          <td>{{vehicle.details.year}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="row" ng-if="vehicle.usertype === 'Security' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Owner Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Permit No.</th>
+          <th>Age</th>
+          <th>Address</th>
+          <th>Gender</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.owner}}</td>
+          <td>{{vehicle.details.permitno}}</td>
+          <td>{{vehicle.details.age}}</td>
+          <td>{{vehicle.details.address}}</td>
+          <td>{{vehicle.details.gender}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="row" ng-if="vehicle.usertype === 'Security' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Insurance Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Insurance No.</th>
+          <th>Company Name</th>
+          <th>Coverage Type</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.insurancecertificate}}</td>
+          <td>{{vehicle.details.insurancename}}</td>
+          <td>{{vehicle.details.insurancetype}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <!--End Security User-->
+
+    <!--Insurance User-->
+  <div class="row" ng-if="vehicle.usertype === 'Insurance' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Vehicle Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Chassis No.</th>
+          <th>Certificate No.</th>
+          <th>Color</th>
+          <th>Make</th>
+          <th>Model</th>
+          <th>Year</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.chassisno}}</td>
+          <td>{{vehicle.details.certificateno}}</td>
+          <td>{{vehicle.details.color}}</td>
+          <td>{{vehicle.details.make}}</td>
+          <td>{{vehicle.details.model}}</td>
+          <td>{{vehicle.details.year}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="row" ng-if="vehicle.usertype === 'Insurance' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Owner Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Permit No.</th>
+          <th>Age</th>
+          <th>Address</th>
+          <th>Gender</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.owner}}</td>
+          <td>{{vehicle.details.permitno}}</td>
+          <td>{{vehicle.details.age}}</td>
+          <td>{{vehicle.details.address}}</td>
+          <td>{{vehicle.details.gender}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="row" ng-if="vehicle.usertype === 'Insurance' && vehicle.showtable" style="margin: 0 4px 0 4px;">
+    <table class="table table-striped table-hover table-condensed">
+      <caption><b style="color:blue;">Insurance Information</b></caption>
+      <tbody>
+        <tr>
+          <th>Insurance No.</th>
+          <th>Company Name</th>
+          <th>Coverage Type</th>
+        </tr>
+        <!--<tr ng-repeat="vehicle in vehicle.details">-->
+        <tr>
+          <td>{{vehicle.details.insurancecertificate}}</td>
+          <td>{{vehicle.details.insurancename}}</td>
+          <td>{{vehicle.details.insurancetype}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <!--End Insurance User-->
 
   <div class="row" ng-if="vehicle.nodata" style="margin: 0 4px 0 4px;">
     <h1>No Data Found</h1>
