--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -38,7 +38,7 @@
           <input type="text" ng-model="register.username" class="form-control" placeholder="Your Email" required>
         </div>
         <div ng-if="register.service=='B'" class="form-group">
-          <input type="text" ng-model="register.orgid" class="form-control" placeholder="Organizational Code" required>
+          <input type="text" ng-model="register.orgid" class="form-control" placeholder="Organizational Code (If Applicable)">
         </div>
         <div class="form-group" ng-if="register.service=='B'">
           <input type="password" name="password" ng-model="register.password" class="form-control" placeholder="Password" required>
