--- a/app/views/header2.html
+++ b/app/views/header2.html
@@ -1,4 +1,4 @@
-<nav class="header navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="header navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="HeaderCtrl">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,13 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Vehicle Ownership Tracking System</a>
+      <a class="navbar-brand" href="#/">Vehicle Ownership Tracking System</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <!--<li><a href="#/signin">Sign-In</a></li>
-        <li><a href="#">Settings</a></li>-->
-        <li><a>Hi, {{vehicle.user}}!</a></li>
+        <!--<li><a href="#/signin">Sign-In</a></li>-->
+        <li><a>Hi, {{tenant.user}}!</a></li>
+        <li><a href="#/billing">Billing</a></li>
         <li><a href="" ng-click="signOut()">Log Out</a></li>
       </ul>
       <!--<form class="navbar-form navbar-right">
