--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,7 +4,7 @@
   <!-- Jumbotron -->
   <div class="jumbotron">
     <h1>VOTS</h1>
-    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
+    <p class="lead">Vehicle Ownership Tracking system is dedicated to helping you find the owner of the vehicle and relate it to your line of business. It is effective and reasonable.</p>
     <p><a class="btn btn-lg btn-success" href="#/signup" role="button">Sign-Up Today</a></p>
   </div>
 
