--- a/app/views/header2.html
+++ b/app/views/header2.html
@@ -12,8 +12,8 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href="#/signin">Sign-In</a></li>-->
-        <li><a>Hi, {{tenant.user}}!</a></li>
-        <li><a href="#/billing">Billing</a></li>
+        <li><a>Hi, {{tenant.user}}</a></li>
+        <li><a href="#/billing">My Account</a></li>
         <li><a href="" ng-click="signOut()">Log Out</a></li>
       </ul>
       <!--<form class="navbar-form navbar-right">
