--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,7 @@
       </div>
       <div class="form-group">
         <select name="country" class="form-control" ng-model="vehicle.country" required>
-          <option value="">--- please select country ---</option>
+          <option value="">--- please select vehicle location by country ---</option>
           <option value="GER">Germany</option>
           <option value="TT">Trinidad and Tobago</option>
           <option value="USA">United States of America</option>
