--- a/app/views/billing.html
+++ b/app/views/billing.html
@@ -91,6 +91,11 @@
                     </div>
                 </div>
             </div>
+            <div class="pull-right">
+              <a href=""><span class="glyphicon glyphicon-download-alt"></span> Download</a>
+              &nbsp;&nbsp;&nbsp;&nbsp;
+              <a href=""><span class="glyphicon glyphicon-print"></span> Print</a>
+            </div>
         </div>
     </div>
     <hr>
