--- a/app/views/header.html
+++ b/app/views/header.html
@@ -7,14 +7,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">Vehicle Ownership Tracking System</a>
+      <!--<a class="navbar-brand" href="#">
+        <img ng-src="images/logo.png" width="150" height="100" alt="Logo">Vehicle Ownership Tracking System
+      </a>-->
+      <a class="navbar-brand" href="#/">
+        <img ng-src="images/logo1.png" alt="Logo">
+        <b>Vehicle Ownership Tracking System</b>
+      </a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/signin">Sign-In</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#/signin"><b>Sign-In</b></a></li>
+        <li><a href="#"><b>Services</b></a></li>
+        <li><a href="#"><b>Support</b></a></li>
+        <li><a href="#"><b>Contact Us</b></a></li>
       </ul>
       <!--<form class="navbar-form navbar-right">
         <input type="text" class="form-control" placeholder="Search...">
