--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,22 +1,27 @@
 <div ng-include='"views/header2.html"'></div>
 <br>
 <br>
+<br>
+<br>
 <div class="container">
   <form role="form" ng-submit="retrieveVehicleInfo()">
     <div class="jumbotron">
       <div class="form-group">
-        <input type="text" class="form-control" ng-model="vehicle.registrationNo" placeholder="Registration Number (License Plate)" autofocus required>
+        <input type="text" class="form-control" ng-model="vehicle.registrationNo" placeholder="Enter Registration Number (License Plate)" autofocus required>
       <br>
       </div>
       <div class="form-group">
         <select name="country" class="form-control" ng-model="vehicle.country" required>
           <option value="">--- please select vehicle location by country ---</option>
+          <option value="BRA">Brazil</option>
+          <option value="FR">Fracne</option>
           <option value="GER">Germany</option>
           <option value="TT">Trinidad and Tobago</option>
+          <option value="UK">United Kingdom</option>
           <option value="USA">United States of America</option>
         </select>  
       </div>
-      <button class="btn btn-success">Search <span class="glyphicon glyphicon-search"></span></button>
+      <button class="btn btn-success"><span class="glyphicon glyphicon-search"></span> <b>Search</b></button>
     </div>
   </form>
 
@@ -26,280 +31,82 @@
     <br>
   </div>
 
-  <!--Basic User-->
-  <div class="row sample-show-hide" ng-if="vehicle.usertype === 'Basic' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Vehicle Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Chassis No.</th>
-          <th>Certificate No.</th>
-          <th>Color</th>
-          <th>Make</th>
-          <th>Model</th>
-          <th>Year</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.chassisno}}</td>
-          <td>{{vehicle.details.certificateno}}</td>
-          <td>{{vehicle.details.color}}</td>
-          <td>{{vehicle.details.make}}</td>
-          <td>{{vehicle.details.model}}</td>
-          <td>{{vehicle.details.year}}</td>
-        </tr>
-      </tbody>
-    </table>
+  <!--Owner Information-->
+  <div class="row" style="margin: 0 1px 0 1px;" ng-if="(vehicle.usertype === 'Insurance' || vehicle.usertype === 'Security' || vehicle.usertype === 'Dealer' || vehicle.usertype === 'Basic') && vehicle.showtable">
+    <div class="panel panel-info">
+      <div class="panel-heading" style="padding-left:5px"><b>Owner Information</b></div>
+      <!-- Table -->
+        <div class="row" style="margin: 0 1px 0 1px;">
+          <div class="col-md-2 text-center" style="padding: 5px 5px;">
+            <img ng-src="images/lewis.jpg" alt="owner photo">
+          </div>
+          <div class="col-md-6">
+            <h5><b>Name:</b> {{vehicle.details.owner}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>National Identification No:</b> {{vehicle.details.id}}</h5>
+            <h5><b>Age:</b> {{vehicle.details.age}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Weight:</b> {{vehicle.details.weight}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Height:</b> {{vehicle.details.height}}</h5>
+            <h5><b>Permit Number:</b> {{vehicle.details.permitno}}</h5>
+            <h5><b>Permit Issued Date:</b> {{vehicle.details.permitissuedate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Permit Expiry Date:</b> 1999-04-30</h5>
+          </div>
+          <div class="col-md-4">
+            <h5><b>Occupation:</b> {{vehicle.details.occupation}}</h5>
+            <h5><b>Gender:</b> {{vehicle.details.gender}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Ethnicity:</b> {{vehicle.details.ethnicity}}</h5>
+            <h5><b>Address:</b> {{vehicle.details.address}}</h5>
+            <h5><b>Date of Birth:</b> {{vehicle.details.dob}}</h5>
+          </div>
+        </div>
+    </div>
   </div>
-  <!--End Basic User-->
+  <!--End Owner Information-->
 
-  <!--Dealer User-->
-  <div class="panel panel-info" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable">
-    <!-- panel contents -->
-    <div class="panel-heading" style="padding-left:5px"><b>Vehicle Information</b></div>
-    <!-- Table -->
-    <!--<table class="table">
-    ...
-    </table>-->
-    <table class="table table-striped table-hover table-condensed">
-      <tbody>
-        <tr>
-          <th>Chassis No.</th>
-          <th>Certificate No.</th>
-          <th>Color</th>
-          <th>Make</th>
-          <th>Model</th>
-          <th>Year</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.chassisno}}</td>
-          <td>{{vehicle.details.certificateno}}</td>
-          <td>{{vehicle.details.color}}</td>
-          <td>{{vehicle.details.make}}</td>
-          <td>{{vehicle.details.model}}</td>
-          <td>{{vehicle.details.year}}</td>
-        </tr>
-      </tbody>
-    </table>
+  <!--Vehicle Information-->
+  <div class="row" style="margin: 0 1px 0 1px;" ng-if="(vehicle.usertype === 'Security' || vehicle.usertype === 'Dealer') && vehicle.showtable">
+    <div class="panel panel-info">
+      <div class="panel-heading" style="padding-left:5px"><b>Vehicle Information</b></div>
+      <!-- Table -->
+        <div class="row" style="margin: 0 1px 0 1px;">
+          <div class="col-md-8">
+            <h5><b>Chassis Number:</b> {{vehicle.details.chassisno}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Certificate Number:</b> {{vehicle.details.certificateno}}</h5>
+            <h5><b>Make:</b> {{vehicle.details.make}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Year:</b> {{vehicle.details.year}}</h5>
+            <h5><b>Color:</b> {{vehicle.details.color}}</h5>
+            <h5><b>Engine Size:</b> {{vehicle.details.enginesize}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Body Type:</b> {{vehicle.details.bodytype}}</h5>
+          </div>
+          <div class="col-md-4">
+            <h5><b>Model:</b> {{vehicle.details.model}}</h5>
+            <h5><b>Tranmission:</b> {{vehicle.details.transmission}}</h5>
+            <h5><b>Doors:</b> {{vehicle.details.doors}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Capacity:</b> {{vehicle.details.passengercapacity}}</h5>
+            <h5><b>Fuel Type:</b> {{vehicle.details.fueltype}}</h5>
+          </div>
+        </div>
+    </div>
   </div>
+  <!--End Vehicle Information-->
 
-  <div class="panel panel-info" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable">
-    <!-- panel contents -->
-    <div class="panel-heading" style="padding-left:5px"><b>Owner Information</b></div>
-    <!-- Table -->
-    <!--<table class="table">
-    ...
-    </table>-->
-    <table class="table table-striped table-hover table-condensed">
-      <tbody>
-        <tr>
-          <th>Name</th>
-          <th>Permit No.</th>
-          <th>Age</th>
-          <th>Address</th>
-          <th>Gender</th>
-          <th>Owner Image</td>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.owner}}</td>
-          <td>{{vehicle.details.permitno}}</td>
-          <td>{{vehicle.details.age}}</td>
-          <td>{{vehicle.details.address}}</td>
-          <td>{{vehicle.details.gender}}</td>
-          <td><img ng-src="images/yeoman.png" alt="loading ..."></td>
-        </tr>
-      </tbody>
-    </table>
+  <!--Insurance Information-->
+  <div class="row" style="margin: 0 1px 0 1px;" ng-if="(vehicle.usertype === 'Insurance' || vehicle.usertype === 'Security') && vehicle.showtable">
+    <div class="panel panel-info">
+      <div class="panel-heading" style="padding-left:5px"><b>Insurance Information</b></div>
+      <!-- Table -->
+        <div class="row" style="margin: 0 1px 0 1px;">
+          <div class="col-md-8">
+            <h5><b>Insurance Number:</b> {{vehicle.details.insurancecertificate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Company Name:</b> {{vehicle.details.insurancename}}</h5>
+            <h5><b>Coverage Type:</b> {{vehicle.details.insurancetype}}</h5>
+            <h5><b>Vehicle Purchased Date:</b> {{vehicle.details.purchasedate}}</h5>
+            <h5><b>Policy Issued Date:</b> {{vehicle.details.insuranceissuedate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Policy Expiry Date:</b> {{vehicle.details.insuranceexpdate}}</h5>
+          </div>
+          <div class="col-md-4">
+            <h5><b>Agent:</b> {{vehicle.details.agent}}</h5>
+            <h5><b>Mortgage:</b> {{vehicle.details.mortgage}}</h5>
+            <h5><b>CCHP:</b> {{vehicle.details.cchp}}</h5>
+          </div>
+        </div>
+    </div>
   </div>
+  <!--End Insurance Information-->
 
-  <div class="panel panel-info" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable">
-    <!-- panel contents -->
-    <div class="panel-heading" style="padding-left:5px"><b>Insurance Information</b></div>
-    <!-- Table -->
-    <!--<table class="table">
-    ...
-    </table>-->
-    <table class="table table-striped table-hover table-condensed">
-      <tbody>
-        <tr>
-          <th>Insurance No.</th>
-          <th>Company Name</th>
-          <th>Coverage Type</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.insurancecertificate}}</td>
-          <td>{{vehicle.details.insurancename}}</td>
-          <td>{{vehicle.details.insurancetype}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <!--<div class="row" ng-if="vehicle.usertype === 'Dealer' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Insurance Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Insurance No.</th>
-          <th>Company Name</th>
-          <th>Coverage Type</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">
-        <tr>
-          <td>{{vehicle.details.insurancecertificate}}</td>
-          <td>{{vehicle.details.insurancename}}</td>
-          <td>{{vehicle.details.insurancetype}}</td>
-        </tr>
-      </tbody>
-    </table>-->
-  </div>
-  <!--End Dealer User-->
-
-  <!--Security User-->
-  <div class="row" ng-if="vehicle.usertype === 'Security' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Vehicle Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Chassis No.</th>
-          <th>Certificate No.</th>
-          <th>Color</th>
-          <th>Make</th>
-          <th>Model</th>
-          <th>Year</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.chassisno}}</td>
-          <td>{{vehicle.details.certificateno}}</td>
-          <td>{{vehicle.details.color}}</td>
-          <td>{{vehicle.details.make}}</td>
-          <td>{{vehicle.details.model}}</td>
-          <td>{{vehicle.details.year}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div class="row" ng-if="vehicle.usertype === 'Security' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Owner Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Name</th>
-          <th>Permit No.</th>
-          <th>Age</th>
-          <th>Address</th>
-          <th>Gender</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.owner}}</td>
-          <td>{{vehicle.details.permitno}}</td>
-          <td>{{vehicle.details.age}}</td>
-          <td>{{vehicle.details.address}}</td>
-          <td>{{vehicle.details.gender}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div class="row" ng-if="vehicle.usertype === 'Security' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Insurance Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Insurance No.</th>
-          <th>Company Name</th>
-          <th>Coverage Type</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.insurancecertificate}}</td>
-          <td>{{vehicle.details.insurancename}}</td>
-          <td>{{vehicle.details.insurancetype}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <!--End Security User-->
-
-    <!--Insurance User-->
-  <div class="row" ng-if="vehicle.usertype === 'Insurance' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Vehicle Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Chassis No.</th>
-          <th>Certificate No.</th>
-          <th>Color</th>
-          <th>Make</th>
-          <th>Model</th>
-          <th>Year</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.chassisno}}</td>
-          <td>{{vehicle.details.certificateno}}</td>
-          <td>{{vehicle.details.color}}</td>
-          <td>{{vehicle.details.make}}</td>
-          <td>{{vehicle.details.model}}</td>
-          <td>{{vehicle.details.year}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div class="row" ng-if="vehicle.usertype === 'Insurance' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Owner Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Name</th>
-          <th>Permit No.</th>
-          <th>Age</th>
-          <th>Address</th>
-          <th>Gender</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.owner}}</td>
-          <td>{{vehicle.details.permitno}}</td>
-          <td>{{vehicle.details.age}}</td>
-          <td>{{vehicle.details.address}}</td>
-          <td>{{vehicle.details.gender}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div class="row" ng-if="vehicle.usertype === 'Insurance' && vehicle.showtable" style="margin: 0 4px 0 4px;">
-    <table class="table table-striped table-hover table-condensed">
-      <caption><b style="color:blue;">Insurance Information</b></caption>
-      <tbody>
-        <tr>
-          <th>Insurance No.</th>
-          <th>Company Name</th>
-          <th>Coverage Type</th>
-        </tr>
-        <!--<tr ng-repeat="vehicle in vehicle.details">-->
-        <tr>
-          <td>{{vehicle.details.insurancecertificate}}</td>
-          <td>{{vehicle.details.insurancename}}</td>
-          <td>{{vehicle.details.insurancetype}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <!--End Insurance User-->
-
+  <!--No Data Found-->
   <div class="row" ng-if="vehicle.nodata" style="margin: 0 4px 0 4px;">
     <h1>No Data Found</h1>
   </div>
-
+  <br>
   <div ng-include='"views/footer.html"'></div>
 
 </div>
