A Bit of Aesthetics
Some improved display design to make the application aesthetically
pleasing

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,54 +1,58 @@
 <div ng-include='"views/header.html"'></div>
-<br>
-<br>
-<br>
-<br>
-<div class="home">
-  <!-- Jumbotron -->
-  <div class="jumbotron">
-    <h1>VOTS</h1>
-    <p class="lead">Vehicle Ownership Tracking system is dedicated to helping you find the owner of the vehicle and relate it to your line of business. It is effective and reasonable.</p>
-    <p><a class="btn btn-lg btn-success" href="#/signup" role="button">Sign-Up Today</a></p>
-  </div>
 
+<div class="home">
   <div class="container">
-  <!-- Example row of columns -->
-  <div class="row">
-    <div class="col-lg-4">
-      <h2>The Power of VOTS.</h2>
-      <p class="text-danger">Be sure about the authenthicity of the Vehicle Owner, Simply by entry!</p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+      <h1>VOTS</h1>
+      <p class="lead">Check online to find out what information the Vehicle Ownership Tracking System (VOTS) holds about a vehicle. You’ll need the vehicle’s registration number (license plate) and location (country).</p>
+      <p><a class="btn btn-lg btn-success" href="#/signup" role="button">Sign-Up Today</a></p>
     </div>
-    <div class="col-lg-4">
-      <h2>Why Should you use it?</h2>
-      <p>
+
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="col-lg-4">
+        <h2>Information you can get</h2>
         <ul>
-          <li>To stay away from any illegal buying or selling</li>
-          <li>To cross check real information</li>
-          <li>To know about the real vehicle owner</li>
-        </ul>
-      </p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+            <li>The date it was first registered</li>
+            <li>Seating capacity</li>
+            <li>Year of manufacture</li>
+            <li>Engine size</li>
+            <li>Chassis number</li>
+            <li>etc.</li>
+          </ul>
+        <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
+      </div>
+      <div class="col-lg-4">
+        <h2>Why Should you use it?</h2>
+        <p>
+          <ul>
+            <li>To stay away from any illegal buying or selling</li>
+            <li>To cross check real information</li>
+            <li>To know about the real vehicle owner</li>
+          </ul>
+        </p>
+        <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
+      </div>
+      <div class="col-lg-4">
+        <h2>Who can use it?</h2>
+        <p>
+          <ul>
+            <li>Basically anyone</li>
+            <li>
+              Organizations
+              <ul>
+                <li>Insurance Companies</li>
+                <li>Security Agencies</li>
+                <li>Car Dealers</li>
+              </ul>
+            </li>
+          </ul>
+        </p>
+        <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
+      </div>
     </div>
-    <div class="col-lg-4">
-      <h2>Who can use it?</h2>
-      <p>
-        <ul>
-          <li>Basically anyone</li>
-          <li>
-            Organizations
-            <ul>
-              <li>Insurance Companies</li>
-              <li>Security Agencies</li>
-              <li>Car Companies</li>
-            </ul>
-          </li>
-        </ul>
-      </p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
+    <br>
+    <div ng-include='"views/footer.html"'></div>
   </div>
 </div>
-
-<div ng-include='"views/footer.html"'></div>
