--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -2,6 +2,7 @@
 <br>
 <br>
 <br>
+<br><br>
 <div class="container">
   <div ng-if="user.processing" class="text-center" style="padding-bottom:15px;">
     <img ng-src="images/processing.gif" alt="processing ...">
@@ -21,9 +22,9 @@
       <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
     </form>
-    <a href="#/signup" class="text-center new-account">Create an account </a>
+    <a href="#/signup" class="text-center new-account"><b>Create an account</b></a>
   </div>
+  <br>
+  <br>
+  <div ng-include='"views/footer.html"'></div>
 </div>
-<br>
-<br>
-<div ng-include='"views/footer.html"'></div>
