--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -2,9 +2,27 @@
 <br>
 <br>
 <br>
+<br>
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-5">
+      <h3>Enjoy the VOTS experience!</h3>
+      <div class="bg-info" style="border-radius:5px; padding:10px;">
+        <h4><b>Sign up as a Single or Group user.</b></h4>
+        <h4 style="border: 1px solid red; padding:10px 5px 5px 5px; border-radius:5px;">
+          <b>The following applies to group users:</b><br><br>
+          <ol>
+            <li>Select the organization tab</li><br>
+            <li>Enter business information including number of users</li><br>
+            <li>Retrieve organization code</li><br>
+            <li>Use your code to sign-up a user under your business account</li>
+          </ol>
+          <span class="text-danger">Remember to store your code in a safe place for future activity</span>
+        </h4>
+      </div>
+    </div>
+    <div class="col-md-6">
+    <br>
       <form accept-charset="utf-8" class="form" role="form" ng-submit="signUp()">
         <legend>Sign Up</legend>
         <div ng-if="register.processing" class="text-center" style="padding-bottom:15px;">
@@ -14,9 +32,9 @@
           <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <strong>Organization Code: {{register.orgcode}}</strong><br>Please use this code to register under your Organizational account!
         </div>
-        <label>Service Type : </label>                    
+        <label>User Type : </label>                    
         <label class="radio-inline">
-          <input type="radio" name="service" ng-model="register.service" value="B" > Basic
+          <input type="radio" name="service" ng-model="register.service" value="B" > User
         </label>
         <label class="radio-inline">
           <input type="radio" name="service" ng-model="register.service" value="O" > Organization
@@ -38,7 +56,7 @@
           <input type="text" ng-model="register.username" class="form-control" placeholder="Your Email" required>
         </div>
         <div ng-if="register.service=='B'" class="form-group">
-          <input type="text" ng-model="register.orgid" class="form-control" placeholder="Organizational Code (If Applicable)">
+          <input type="text" ng-model="register.orgid" class="form-control" placeholder="Organizational Code (Applicable to Group Accounts Only)">
         </div>
         <div class="form-group" ng-if="register.service=='B'">
           <input type="password" name="password" ng-model="register.password" class="form-control" placeholder="Password" required>
@@ -92,82 +110,10 @@
           By clicking Create my account, you agree to our Terms and that you have read our Data Use Policy, including our Cookie Use.
         </span>
         <button ng-if="register.service == 'B'" class="btn btn-success btn-block signup-btn" type="submit">Create my account</button>
-        <button ng-if="register.service == 'O'" class="btn btn-success btn-block signup-btn" type="submit">Create organization account</button>
+        <button ng-if="register.service == 'O'" class="btn btn-success btn-block signup-btn" type="submit">Retrieve organization code</button>
       </form>
     </div>
-  </div>            
+  </div>   
+  <br>
+  <div ng-include='"views/footer.html"'></div>         
 </div>
-
-
-<br>
-<br>
-<div ng-include='"views/footer.html"'></div>
-
-<!--<form class="form-horizontal" role="form">
-    <fieldset>
-      <legend>Payment</legend>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="card-holder-name">Name on Card</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" name="card-holder-name" id="card-holder-name" placeholder="Card Holder's Name">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="card-number">Card Number</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" name="card-number" id="card-number" placeholder="Debit/Credit Card Number">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="expiry-month">Expiration Date</label>
-        <div class="col-sm-9">
-          <div class="row">
-            <div class="col-xs-3">
-              <select class="form-control col-sm-2" name="expiry-month" id="expiry-month">
-                <option>Month</option>
-                <option value="01">Jan (01)</option>
-                <option value="02">Feb (02)</option>
-                <option value="03">Mar (03)</option>
-                <option value="04">Apr (04)</option>
-                <option value="05">May (05)</option>
-                <option value="06">June (06)</option>
-                <option value="07">July (07)</option>
-                <option value="08">Aug (08)</option>
-                <option value="09">Sep (09)</option>
-                <option value="10">Oct (10)</option>
-                <option value="11">Nov (11)</option>
-                <option value="12">Dec (12)</option>
-              </select>
-            </div>
-            <div class="col-xs-3">
-              <select class="form-control" name="expiry-year">
-                <option value="13">2013</option>
-                <option value="14">2014</option>
-                <option value="15">2015</option>
-                <option value="16">2016</option>
-                <option value="17">2017</option>
-                <option value="18">2018</option>
-                <option value="19">2019</option>
-                <option value="20">2020</option>
-                <option value="21">2021</option>
-                <option value="22">2022</option>
-                <option value="23">2023</option>
-              </select>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="cvv">Card CVV</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="cvv" id="cvv" placeholder="Security Code">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9">
-          <button type="button" class="btn btn-success">Pay Now</button>
-        </div>
-      </div>
-    </fieldset>
-  </form>
-</div>-->
